--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="content">
            <nav class="navbar">
               <!-- logo -->
-               <img src="/assets/images/logo.svg" alt="Besnik.">
+               <img src="./assets/images/logo.svg" alt="Besnik.">
               <!-- navigation -->
                <ul>
                 <li><a href="">Home</a></li>
@@ -64,8 +64,8 @@
                     <p>5 Star Ratings (2k+ Review)</p>
                 </div>
                 <div class="images">
-                    <img src="/assets/images/image1.svg" alt="Meundies">
-                    <img src="/assets/images/slack.svg" alt="Slack">
+                    <img src="./assets/images/image1.svg" alt="Meundies">
+                    <img src="./assets/images/slack.svg" alt="Slack">
                     <img src="./assets/images/Amazonr.svg" alt="Amazone">
                     <img src="./assets/images/wocommer.svg" alt="Woocommerce">
                     <img src="./assets/images/sitepoint.svg" alt="Sitepoint">
